@@ -29,7 +29,6 @@ import java.util.Set;
 
 import de.uka.ilkd.key.dl.arithmetics.MathSolverManager;
 import de.uka.ilkd.key.dl.model.TermFactory;
-import de.uka.ilkd.key.dl.rules.GroebnerBasisRule;
 import de.uka.ilkd.key.gui.GUIEvent;
 import de.uka.ilkd.key.gui.KeYMediator;
 import de.uka.ilkd.key.gui.Main;
@@ -52,6 +51,26 @@ public class DLOptionBean implements Settings {
 		private String string;
 
 		private ApplyRules(String str) {
+			this.string = str;
+		}
+
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see java.lang.Enum#toString()
+		 */
+		@Override
+		public String toString() {
+			return string;
+		}
+	}
+
+	public static enum FirstOrderStrategy {
+		STOP("stop"), UNFOLD("unfold"), EAGER("eager"), IBC("IBC"), LAZY("lazy");
+
+		private String string;
+
+		private FirstOrderStrategy(String str) {
 			this.string = str;
 		}
 
@@ -125,17 +144,7 @@ public class DLOptionBean implements Settings {
 	/**
 	 * 
 	 */
-	private static final String DLOPTIONS_SPLIT_BEYOND_FO = "[DLOptions]splitBeyondFO";
-
-	/**
-	 * 
-	 */
-	private static final String DLOPTIONS_USE_TIMEOUT_STRATEGY = "[DLOptions]useTimeoutStrategy";
-
-	/**
-	 * 
-	 */
-	private static final String TRUE = new Boolean(true).toString();
+	private static final String TRUE = Boolean.valueOf(true).toString();
 
 	/**
 	 * 
@@ -149,7 +158,7 @@ public class DLOptionBean implements Settings {
 	/**
 	 * 
 	 */
-	private static final String DLOPTIONS_CALL_REDUCE = "[DLOptions]callReduce";
+	private static final String DLOPTIONS_FO_STRATEGY = "[DLOptions]FOStrategy";
 
 	public static final DLOptionBean INSTANCE = new DLOptionBean();
 
@@ -181,8 +190,6 @@ public class DLOptionBean implements Settings {
 
 	private static final String DLOPTIONS_COUNTEREXAMPLE_TEST = "[DLOptions]counterexampleTest";
 
-	private static final String DLOPTIONS_STOP_AT_FO = "[DLOptions]stopAtFO";
-
 	private static final String DLOPTIONS_INVARIANT_RULE = "[DLOptions]invariantRule";
 
 	private static final String DLOPTIONS_USE_DIFF_SAT = "[DLOptions]DiffSat";
@@ -201,9 +208,12 @@ public class DLOptionBean implements Settings {
 
 	private static final String DLOPTIONS_GROEBNER_BASIS_CALCULATOR = "[DLOptions]groebnerBasisCalculator";
 
+	private static final String DLOPTIONS_USE_POWERSET_ITERATIVE_REDUCE = "[DLOptions]usePowersetIterativeReduce";
+	private static final String DLOPTIONS_PERCENT_OF_POWERSET_FOR_ITERATIVE_REDUCE = "[DLOptions]percentOfPowersetForIterativeReduce";
+
 	private Set<Settings> subOptions;
 
-	private boolean callReduce;
+	private FirstOrderStrategy foStrategy;
 
 	private long initialTimeout;
 
@@ -216,10 +226,6 @@ public class DLOptionBean implements Settings {
 	private long diffSatTimeout;
 
 	private long loopSatTimeout;
-
-	private boolean useTimeoutStrategy;
-
-	private boolean splitBeyondFO;
 
 	private HashSet<SettingsListener> listeners;
 
@@ -234,8 +240,6 @@ public class DLOptionBean implements Settings {
 	private boolean applyUpdatesToModalities;
 
 	private CounterexampleTest counterexampleTest;
-
-	private boolean stopAtFO;
 
 	private DiffSat diffSatStrategy;
 
@@ -265,9 +269,13 @@ public class DLOptionBean implements Settings {
 
 	private String groebnerBasisCalculator;
 
+	private boolean usePowersetIterativeReduce;
+
+	private int percentOfPowersetForReduce;
+
 	private DLOptionBean() {
 		subOptions = new LinkedHashSet<Settings>();
-		callReduce = true;
+		foStrategy = FirstOrderStrategy.IBC;
 		initialTimeout = 2;
 		diffSatTimeout = 4;
 		loopSatTimeout = 2000;
@@ -275,13 +283,11 @@ public class DLOptionBean implements Settings {
 		linearTimeoutIncreaseFactor = 2;
 		constantTimeoutIncreaseFactor = 0;
 		simplifyTimeout = 0;
-		splitBeyondFO = false;
-		useTimeoutStrategy = true;
 		readdQuantifiers = true;
 		simplifyBeforeReduce = false;
 		simplifyAfterReduce = false;
-                simplifyAfterODESolve = false;
-		normalizeEquations = true;
+		simplifyAfterODESolve = false;
+		normalizeEquations = false;
 		applyUpdatesToModalities = false;
 		counterExampleGenerator = "";
 		odeSolver = "";
@@ -296,6 +302,8 @@ public class DLOptionBean implements Settings {
 		useIterativeReduceRule = false;
 		termFactoryClass = de.uka.ilkd.key.dl.model.impl.TermFactoryImpl.class;
 		applyLocalReduce = false;
+		usePowersetIterativeReduce = true;
+		percentOfPowersetForReduce = 70;
 
 		listeners = new HashSet<SettingsListener>();
 	}
@@ -359,17 +367,17 @@ public class DLOptionBean implements Settings {
 	/**
 	 * @return the callReduce
 	 */
-	public boolean isCallReduce() {
-		return callReduce;
+	public FirstOrderStrategy getFoStrategy() {
+		return foStrategy;
 	}
 
 	/**
 	 * @param callReduce
 	 *            the callReduce to set
 	 */
-	public void setCallReduce(boolean callReduce) {
-		if (this.callReduce != callReduce) {
-			this.callReduce = callReduce;
+	public void setFoStrategy(FirstOrderStrategy callReduce) {
+		if (this.foStrategy != callReduce) {
+			this.foStrategy = callReduce;
 			firePropertyChanged();
 		}
 	}
@@ -396,42 +404,6 @@ public class DLOptionBean implements Settings {
 		firePropertyChanged();
 	}
 
-	/**
-	 * @return the useTimeoutStrategy
-	 */
-	public boolean isUseTimeoutStrategy() {
-		return useTimeoutStrategy;
-	}
-
-	/**
-	 * @param useTimeoutStrategy
-	 *            the useTimeoutStrategy to set
-	 */
-	public void setUseTimeoutStrategy(boolean useTimeoutStrategy) {
-		if (this.useTimeoutStrategy != useTimeoutStrategy) {
-			this.useTimeoutStrategy = useTimeoutStrategy;
-			firePropertyChanged();
-		}
-	}
-
-	/**
-	 * @return the splitBeyondFO
-	 */
-	public boolean isSplitBeyondFO() {
-		return splitBeyondFO;
-	}
-
-	/**
-	 * @param splitBeyondFO
-	 *            the splitBeyondFO to set
-	 */
-	public void setSplitBeyondFO(boolean splitBeyondFO) {
-		if (this.splitBeyondFO != splitBeyondFO) {
-			this.splitBeyondFO = splitBeyondFO;
-			firePropertyChanged();
-		}
-	}
-
 	private void firePropertyChanged() {
 		// System.out.println("Property changed");//XXX
 		// TODO: iterate over all proofs
@@ -454,7 +426,9 @@ public class DLOptionBean implements Settings {
 	/*
 	 * (non-Javadoc)
 	 * 
-	 * @see de.uka.ilkd.key.gui.Settings#addSettingsListener(de.uka.ilkd.key.gui.SettingsListener)
+	 * @see
+	 * de.uka.ilkd.key.gui.Settings#addSettingsListener(de.uka.ilkd.key.gui.
+	 * SettingsListener)
 	 */
 	public void addSettingsListener(SettingsListener l) {
 		listeners.add(l);
@@ -472,9 +446,9 @@ public class DLOptionBean implements Settings {
 		for (Settings sub : subOptions) {
 			sub.readSettings(props);
 		}
-		String property = props.getProperty(DLOPTIONS_CALL_REDUCE);
+		String property = props.getProperty(DLOPTIONS_FO_STRATEGY);
 		if (property != null) {
-			callReduce = property.equals(TRUE);
+			foStrategy = FirstOrderStrategy.valueOf(property);
 		}
 		property = props.getProperty(DLOPTIONS_INITIAL_TIMEOUT);
 		if (property != null) {
@@ -492,14 +466,6 @@ public class DLOptionBean implements Settings {
 		property = props.getProperty(DLOPTIONS_CONSTANT);
 		if (property != null) {
 			constantTimeoutIncreaseFactor = Integer.parseInt(property);
-		}
-		property = props.getProperty(DLOPTIONS_USE_TIMEOUT_STRATEGY);
-		if (property != null) {
-			useTimeoutStrategy = property.equals(TRUE);
-		}
-		property = props.getProperty(DLOPTIONS_SPLIT_BEYOND_FO);
-		if (property != null) {
-			splitBeyondFO = property.equals(TRUE);
 		}
 		property = props.getProperty(DLOPTIONS_READD_QUANTIFIERS);
 		if (property != null) {
@@ -524,10 +490,6 @@ public class DLOptionBean implements Settings {
 		property = props.getProperty(DLOPTIONS_COUNTEREXAMPLE_TEST);
 		if (property != null) {
 			counterexampleTest = CounterexampleTest.valueOf(property);
-		}
-		property = props.getProperty(DLOPTIONS_STOP_AT_FO);
-		if (property != null) {
-			stopAtFO = property.equals(TRUE);
 		}
 		property = props.getProperty(DLOPTIONS_IGNORE_ANNOTATIONS);
 		if (property != null) {
@@ -648,6 +610,17 @@ public class DLOptionBean implements Settings {
 			simplifyAfterODESolve = Boolean.valueOf(property);
 		}
 
+		property = props.getProperty(DLOPTIONS_USE_POWERSET_ITERATIVE_REDUCE);
+		if (property != null) {
+			usePowersetIterativeReduce = Boolean.valueOf(property);
+		}
+
+		property = props
+				.getProperty(DLOPTIONS_PERCENT_OF_POWERSET_FOR_ITERATIVE_REDUCE);
+		if (property != null) {
+			percentOfPowersetForReduce = Integer.valueOf(property);
+		}
+
 	}
 
 	/*
@@ -659,12 +632,7 @@ public class DLOptionBean implements Settings {
 		for (Settings sub : subOptions) {
 			sub.writeSettings(props);
 		}
-		props.setProperty(DLOPTIONS_CALL_REDUCE, new Boolean(callReduce)
-				.toString());
-		props.setProperty(DLOPTIONS_SPLIT_BEYOND_FO, new Boolean(splitBeyondFO)
-				.toString());
-		props.setProperty(DLOPTIONS_USE_TIMEOUT_STRATEGY, new Boolean(
-				useTimeoutStrategy).toString());
+		props.setProperty(DLOPTIONS_FO_STRATEGY, foStrategy.name());
 		props
 				.setProperty(DLOPTIONS_INITIAL_TIMEOUT, "" + initialTimeout
 						* 1000);
@@ -674,19 +642,18 @@ public class DLOptionBean implements Settings {
 		props.setProperty(DLOPTIONS_CONSTANT, ""
 				+ constantTimeoutIncreaseFactor);
 
-		props.setProperty(DLOPTIONS_READD_QUANTIFIERS, new Boolean(
+		props.setProperty(DLOPTIONS_READD_QUANTIFIERS, Boolean.valueOf(
 				readdQuantifiers).toString());
-		props.setProperty(DLOPTIONS_SIMPLIFY_BEFORE_REDUCE, new Boolean(
+		props.setProperty(DLOPTIONS_SIMPLIFY_BEFORE_REDUCE, Boolean.valueOf(
 				simplifyBeforeReduce).toString());
-		props.setProperty(DLOPTIONS_SIMPLIFY_AFTER_REDUCE, new Boolean(
+		props.setProperty(DLOPTIONS_SIMPLIFY_AFTER_REDUCE, Boolean.valueOf(
 				simplifyAfterReduce).toString());
-		props.setProperty(DLOPTIONS_NORMALIZE_EQUATIONS, new Boolean(
+		props.setProperty(DLOPTIONS_NORMALIZE_EQUATIONS, Boolean.valueOf(
 				normalizeEquations).toString());
-		props.setProperty(DLOPTIONS_APPLY_UPDATES_TO_MODALITIES, new Boolean(
-				applyUpdatesToModalities).toString());
+		props.setProperty(DLOPTIONS_APPLY_UPDATES_TO_MODALITIES, Boolean
+				.valueOf(applyUpdatesToModalities).toString());
 		props.setProperty(DLOPTIONS_COUNTEREXAMPLE_TEST, counterexampleTest
 				.name());
-		props.setProperty(DLOPTIONS_STOP_AT_FO, Boolean.toString(stopAtFO));
 		props.setProperty(DLOPTIONS_IGNORE_ANNOTATIONS, Boolean
 				.toString(ignoreAnnotations));
 
@@ -729,6 +696,10 @@ public class DLOptionBean implements Settings {
 				.toString(applyLocalReduce));
 		props.setProperty(DLOPTIONS_SIMPLIFY_AFTER_ODESOLVE, Boolean
 				.toString(simplifyAfterODESolve));
+		props.setProperty(DLOPTIONS_USE_POWERSET_ITERATIVE_REDUCE, Boolean
+				.toString(usePowersetIterativeReduce));
+		props.setProperty(DLOPTIONS_PERCENT_OF_POWERSET_FOR_ITERATIVE_REDUCE,
+				"" + percentOfPowersetForReduce);
 	}
 
 	public void addSubOptionBean(Settings sub) {
@@ -979,22 +950,6 @@ public class DLOptionBean implements Settings {
 	}
 
 	/**
-	 * @return the stopAtFO
-	 */
-	public boolean isStopAtFO() {
-		return stopAtFO;
-	}
-
-	/**
-	 * @param stopAtFO
-	 *            the stopAtFO to set
-	 */
-	public void setStopAtFO(boolean stopAtFO) {
-		this.stopAtFO = stopAtFO;
-		firePropertyChanged();
-	}
-
-	/**
 	 * @return the invariantRule
 	 */
 	public InvariantRule getInvariantRule() {
@@ -1162,10 +1117,46 @@ public class DLOptionBean implements Settings {
 	 * @return TODO documentation since Jun 9, 2008
 	 */
 	public void setGroebnerBasisCalculator(String groebnerBasisCalculator) {
-		if (this.groebnerBasisCalculator != groebnerBasisCalculator) {
+		if (this.groebnerBasisCalculator.equals(groebnerBasisCalculator)) {
 			this.groebnerBasisCalculator = groebnerBasisCalculator;
 			firePropertyChanged();
 		}
 
+	}
+
+	/**
+	 * @return the usePowersetIterativeReduce
+	 */
+	public boolean isUsePowersetIterativeReduce() {
+		return usePowersetIterativeReduce;
+	}
+
+	/**
+	 * @param usePowersetIterativeReduce
+	 *            the usePowersetIterativeReduce to set
+	 */
+	public void setUsePowersetIterativeReduce(boolean usePowersetIterativeReduce) {
+		if (this.usePowersetIterativeReduce != usePowersetIterativeReduce) {
+			this.usePowersetIterativeReduce = usePowersetIterativeReduce;
+			firePropertyChanged();
+		}
+	}
+
+	/**
+	 * @return the percentOfPowersetForReduce
+	 */
+	public int getPercentOfPowersetForReduce() {
+		return percentOfPowersetForReduce;
+	}
+
+	/**
+	 * @param percentOfPowersetForReduce
+	 *            the percentOfPowersetForReduce to set
+	 */
+	public void setPercentOfPowersetForReduce(int percentOfPowersetForReduce) {
+		if (this.percentOfPowersetForReduce != percentOfPowersetForReduce) {
+			this.percentOfPowersetForReduce = percentOfPowersetForReduce;
+			firePropertyChanged();
+		}
 	}
 }
